[gd_scene load_steps=39 format=3 uid="uid://bporlauvhb1m8"]

[ext_resource type="Script" uid="uid://bd02db1dg7fme" path="res://player/player.gd" id="1_xhfnw"]
[ext_resource type="Script" uid="uid://cn2u3c6tkito0" path="res://player/auto_weapon.gd" id="2_06mnu"]
[ext_resource type="Script" uid="uid://cg4svlkrqmlrv" path="res://player/raycast_weapon.gd" id="2_weapon"]
[ext_resource type="AudioStream" uid="uid://cokuwf77iot1f" path="res://Assets/Sons Critters/Bruitage/laser-gun-2.mp3" id="3_mhpjh"]
[ext_resource type="Texture2D" uid="uid://bgbgio4t82yq4" path="res://Assets/Sprites/Revolver.png" id="4_gskgj"]
[ext_resource type="AudioStream" uid="uid://cnxna2q2hfv33" path="res://Assets/Sons Critters/Bruitage/Gémissements/young-male-scream.mp3" id="5_aqcbf"]
[ext_resource type="AudioStream" uid="uid://co2gc4phif6go" path="res://Assets/Sons Critters/Bruitage/Dégats/single-pistol-gunshot-3.mp3" id="5_mhpjh"]
[ext_resource type="AudioStream" uid="uid://dlb06f6iddasv" path="res://Assets/Sons Critters/Bruitage/Dégats/Heartbeat.mp3" id="5_x8kxw"]
[ext_resource type="Texture2D" uid="uid://bjo1nnryt4dj5" path="res://Assets/Sprites/heavy_gun_animation.png" id="8_ndjxb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0rwas"]

[sub_resource type="SphereShape3D" id="SphereShape3D_xhfnw"]
radius = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8nth8"]
atlas = ExtResource("8_ndjxb")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tqfn"]
atlas = ExtResource("8_ndjxb")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y617q"]
atlas = ExtResource("8_ndjxb")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eyfg"]
atlas = ExtResource("8_ndjxb")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_76mgg"]
atlas = ExtResource("8_ndjxb")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddnt4"]
atlas = ExtResource("8_ndjxb")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0lmo"]
atlas = ExtResource("8_ndjxb")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_234y4"]
atlas = ExtResource("8_ndjxb")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8vxv"]
atlas = ExtResource("8_ndjxb")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhjxl"]
atlas = ExtResource("8_ndjxb")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2u3w"]
atlas = ExtResource("8_ndjxb")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyl0s"]
atlas = ExtResource("8_ndjxb")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6miu"]
atlas = ExtResource("8_ndjxb")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_8cy8x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nth8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tqfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y617q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eyfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76mgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddnt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0lmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_234y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8vxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhjxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2u3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyl0s")
}],
"loop": true,
"name": &"fire",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6miu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ndjxb"]
atlas = ExtResource("4_gskgj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qrx2"]
atlas = ExtResource("4_gskgj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b32pr"]
atlas = ExtResource("4_gskgj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbkom"]
atlas = ExtResource("4_gskgj")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4g0h"]
atlas = ExtResource("4_gskgj")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4f8b"]
atlas = ExtResource("4_gskgj")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8epa"]
atlas = ExtResource("4_gskgj")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w24id"]
atlas = ExtResource("4_gskgj")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uewl2"]
atlas = ExtResource("4_gskgj")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofhxi"]
atlas = ExtResource("4_gskgj")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu5hk"]
atlas = ExtResource("4_gskgj")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhpjh"]
atlas = ExtResource("4_gskgj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnvi2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndjxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qrx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b32pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbkom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4g0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4f8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8epa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w24id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uewl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofhxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu5hk")
}],
"loop": false,
"name": &"fire",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhpjh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_xhfnw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0rwas")

[node name="Node3D" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Node3D"]

[node name="DamageZone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageZone"]
shape = SubResource("SphereShape3D_xhfnw")

[node name="AutoWeapon" type="Node" parent="."]
script = ExtResource("2_06mnu")
camera_path = NodePath("../Node3D/Camera3D")
player_body_path = NodePath("..")

[node name="FireRateTimer" type="Timer" parent="AutoWeapon"]
wait_time = 0.12
one_shot = true

[node name="GunShot" type="AudioStreamPlayer" parent="AutoWeapon"]
stream = ExtResource("3_mhpjh")
volume_db = -9.928
max_polyphony = 4

[node name="RaycastWeapon" type="Node" parent="."]
script = ExtResource("2_weapon")
camera_path = NodePath("../Node3D/Camera3D")
player_body_path = NodePath("..")

[node name="FireRateTimer" type="Timer" parent="RaycastWeapon"]
wait_time = 0.4
one_shot = true

[node name="HeavyGunShot" type="AudioStreamPlayer" parent="RaycastWeapon"]
stream = ExtResource("5_mhpjh")
volume_db = -11.924

[node name="DamageAnimation" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="DamageAnimation"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="AutoWeaponAnimation" type="AnimatedSprite2D" parent="CanvasLayer/Control"]
texture_filter = 1
position = Vector2(-428.434, -322.137)
rotation = -0.0418596
scale = Vector2(5.56772, 5.56772)
sprite_frames = SubResource("SpriteFrames_8cy8x")
animation = &"idle"
autoplay = "idle"

[node name="Control2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="MainWeaponAnimation" type="AnimatedSprite2D" parent="CanvasLayer/Control2"]
texture_filter = 1
texture_repeat = 1
position = Vector2(-628, -567.268)
scale = Vector2(4.66406, 4.85366)
sprite_frames = SubResource("SpriteFrames_wnvi2")
animation = &"idle"
autoplay = "fire"
centered = false

[node name="Footsteps-boots" type="AudioStreamPlayer" parent="."]

[node name="DeathScream" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_aqcbf")
volume_db = -26.0

[node name="HeartbeatPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_x8kxw")
